--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "name": "sandbox",
+  "name": "portfolioFrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
+    "axios": "^0.19.0",
+    "firebase": "^6.3.1",
+    "material-table": "^1.44.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "5.1.1",
+    "react-redux-firebase": "^2.3.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "recharts": "^1.6.2",
+    "redux": "^4.0.4",
+    "redux-firestore": "^0.8.0",
+    "redux-thunk": "^2.3.0",
+    "validate": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
